Fund Handling for successful activation and referal bonus
Dummy Algo for read news
Updated the .env.example

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,18 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+REGISTRATION_FEE=2600
+READ_BONUS=21
+REGISTRATION_BONUS=600
+REFERAL_BONUS=1000
+
+PAYSTACK_URL="https://paystack.com"
+
+PAYSTACK_PUBLIC_KEY=pk_test_2a758026b16c8b3a4c52a10f1c36204fcf80556d
+PAYSTACK_SECRET_KEY=sk_test_e4b7af02b0adcab7ecc27b94e37cd1b1bdfe62ea
+PAYSTACK_PAYMENT_URL=https://api.paystack.com
+MERCHANT_EMAIL=readmoni9ja@gmail.com
+
+NEWS_API_KEY=21fc8b13af184278b31c509a8a9db986
+NEWS_SOURCE=CACHE
